@@ -1,6 +1,8 @@
 Changes in Slurm-GCP 4.1.3
 ==========================
  -- Add preliminary spot instance support eg. preemptible_bursting = "spot".
+ -- Regularly delete instances corresponding to Slurm nodes that should be
+    powered down.
 
 Changes in Slurm-GCP 4.1.2
 ==========================
